# ebus

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp.yaml
include/ebus/: constructor.hh  ebus.hh  event.hh  export.hh  hooks.hh  singleton.hh  task.hh  task_scheduler.hh  task_worker.hh
include/ebus/internal/: ebus.def.hh  ebus.inl.hh  event.def.hh  event.inl.hh
include/ebus/memory/: intrusive_list.hh  intrusive_ptr.hh  safe_queue.hh
src/: CMakeLists.txt
src/ebus/: ebus.cc  ebus.def.hh  ebus.hh  ebus.inl
src/event/: event.def.hh  event.hh  event.inl.hh
src/memory/: intrusive_list.hh  intrusive_ptr.hh  safe_queue.hh
src/task/: task_scheduler.cc  task_worker.cc  task_worker.hh
test/: CMakeLists.txt  export_lib.cc  export_lib.hh  feature_test.org  hook_lib.hh  hook_lib1.cc  hook_lib2.cc  test_api.hh  test_ebus.cc  test_ebus_ref.cc  test_event.cc  test_export.cc  test_hooks.cc  test_task.cc  test_task_oneshot.cc  test_task_reschedule.cc  test_task_scheduler.cc  util.cc  util.hh
